# kcp

./: AI_AGENT_GUIDE.md  CONTRIBUTING.md  GENESIS.json  KCP_MANIFEST.json  Makefile  README.md  README.pt-br.md  RFC-001-CORE.md  SPEC.md  demo.py  llms.txt
.github/: PEER_SUBMISSION.md
.github/actions/publish/: README.md  action.yml
.github/workflows/: peer-health-check.yml  publish-npm.yml  publish-pypi.yml
docs/: comparison.md  deploy-digitalocean.md  deploy-docker.md  index.html  openapi.yaml  peers.json  roadmap.md  status.html  testing.md  use-cases.md  whitepaper.md
examples/: test_data.csv
infra/: deploy-new-peers.sh  kcp-peer01.service  kcp-peer02.service  kcp-peer03.service  kcp-peer06.service  nginx-kcp-peers.conf
infra/nginx/: kcp-ratelimit.conf
mcp-server/kcp_mcp_server/: server.py
poc/: kcp_core.py
rfcs/: kcp-001-core.md  kcp-004-network-models.md
sdk/go/: README.md
sdk/python/: pyproject.toml
sdk/python/kcp/: crypto.py  node.py  store.py  sync_worker.py
sdk/python/kcp/ui/: index.html
sdk/python/tests/: test_crypto.py  test_server.py
sdk/typescript/: package.json
