[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kcp"
version = "0.2.0"
description = "Knowledge Context Protocol — Layer 8 for AI-generated knowledge"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Thiago Silva", email = "tgosoul@gmail.com"}]

keywords = [
    "knowledge", "protocol", "ai", "lineage", "governance",
    "p2p", "federation", "layer8", "osi",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "cryptography>=41.0",
    "httpx>=0.27",
]
server = [
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "httpx>=0.25",
]
hub = [
    "httpx>=0.25",
]
all = [
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "httpx>=0.25",
]

[project.scripts]
kcp = "kcp.cli:main"

[project.urls]
Homepage = "https://github.com/kcp-protocol/kcp"
Documentation = "https://github.com/kcp-protocol/kcp/blob/main/SPEC.md"
Repository = "https://github.com/kcp-protocol/kcp"
Issues = "https://github.com/kcp-protocol/kcp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["kcp*"]

[tool.setuptools.package-data]
kcp = ["ui/*.html"]
